# teleprinter

./: CMakeLists.txt  README.md  run.sh  teleprinter  test.html  test.print  valaweb
src/: commands.vala  feed.vala  main  main.vala  printer.vala  regex.vala  run.sh  teleprinter.vala  teleprinter.web  test.print
